--- a/src/main/resources/br/com/washii/view/agendamentos/cliente-agendamento.fxml
+++ b/src/main/resources/br/com/washii/view/agendamentos/cliente-agendamento.fxml
@@ -1,26 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Circle?>
-<?import javafx.scene.text.Font?>
-<?import org.kordamp.ikonli.javafx.FontIcon?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
+<?import org.kordamp.ikonli.javafx.*?>
 
-<ScrollPane fitToWidth="true" styleClass="background-transparente" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.screens.agendamentos.ClienteAgendamentoController">
+<ScrollPane fitToWidth="true" styleClass="background-transparente" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.washii.presentation.screens.agendamentos.ClienteAgendamentoController">
    <content>
       <VBox alignment="TOP_CENTER" spacing="25.0" styleClass="background-transparente">
          <padding>
@@ -152,12 +139,10 @@
 
                               <HBox alignment="CENTER_RIGHT" spacing="15.0" GridPane.columnSpan="2" GridPane.rowIndex="1">
                                  <children>
+                                    <TextFlow fx:id="containerAviso" HBox.hgrow="ALWAYS" />
                                     <Button fx:id="btnCancelar" mnemonicParsing="false" prefHeight="35.0" prefWidth="120.0" styleClass="button-secondary" text="Cancelar" />
                                     <Button fx:id="btnConfirmar" mnemonicParsing="false" prefHeight="35.0" prefWidth="180.0" styleClass="button-primary" text="Confirmar Agendamento" />
                                  </children>
-                                 <padding>
-                                    <Insets top="10.0" />
-                                 </padding>
                               </HBox>
                            </children>
                         </GridPane>
